k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-ha-webapp
  labels:
    app: aws-ha-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-ha-webapp
  template:
    metadata:
      labels:
        app: aws-ha-webapp
    spec:
      containers:
        - name: aws-ha-webapp
          image: 698528536903.dkr.ecr.us-east-2.amazonaws.com/aws-ha-webapp:v1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
