k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: aws-ha-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-ha-webapp
  template:
    metadata:
      labels:
        app: aws-ha-webapp
    spec:
      containers:
        - name: aws-ha-webapp
          image: 698528536903.dkr.ecr.us-east-2.amazonaws.com/aws-ha-webapp:v1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

  strategy:
    blueGreen:
      activeService: aws-ha-webapp-stable-svc
      previewService: aws-ha-webapp-preview-svc
      autoPromotionEnabled: false
