k8s/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-ha-secure-webapp
spec:
  containers:
    - name: test-container
      image: nginx
      volumeMounts:
        # name must match the volume name below
        - name: secret-volume
          mountPath: /etc/secret-volume
          readOnly: true
  # The secret data is exposed to Containers in the Pod through a Volume.
  volumes:
    - name: secret-volume
      secret:
        secretName: aws-ha-secure-webapp
