k8s/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-ha-webapp-preview-svc
spec:
  type: ClusterIP
  selector:
    app: aws-ha-webapp
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
