k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-ha-webapp-svc
  labels:
    app: aws-ha-webapp
spec:
  type: ClusterIP
  selector:
    app: aws-ha-webapp
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
